--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,21 @@
         tools:targetApi="31">
         <activity
             android:name=".OptionListActivity"
-            android:exported="false" android:parentActivityName=".QuestionListActivity" />
+            android:exported="false"
+            android:parentActivityName=".QuestionListActivity"
+            android:theme="@style/Theme.AppCompat.Light" />
+
         <activity
             android:name=".QuestionListActivity"
             android:exported="false"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity" android:theme="@style/Theme.AppCompat.Light" />
+
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.QuizMaster">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
